Enhancement - Font copying (pdfwrite)

Bug #691573 " invalidfont in xshow". The file does in fact contain an invalidfont, the
type 42 embedded fonts are defined by adding /.notdef to the CharStrings dictionary as
if it were the Encoding array. The key /.notdef is added 256 times with values ranging
from 0 to 255. Of course only the last one is actually defined.

This means that when we come to copy the /.notdef glyph for our font copy, the type 42
GID is 255. However the font does not contain a glyph with GID 255, so the copy of the
font fails.

Although this is an illegal font, Adobe Acrobat Distiller does produce a PDF file from
it. In order to duplicate this, code has been added when copying a font. If we fail to
copy a glyph, and the glyph is /.notdef and the GID is non-zero, we try to copy a glyph
with GID 0 instead. If that fails we error out, otherwise we use the glyph with GID 0.
(TrueType font /.notdef glyph has GID 0)

This works for the supplied file but is not, of course, a guaranteed solution since
another badly formed font may not contain a glyph with GID 0.

No Expected Differences

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11652 a1074d23-0009-0410-80fe-cf8c14f379e6